[package]
name = "kiss"
version = "0.1.0"
edition = "2021"

[lib]
name = "kiss"
path = "src/lib.rs"

[[bin]]
name = "kiss"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"
httpdate = "1.0"
rustc-hash = "1.1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.8"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true